--- a/sass/vars/_theme.scss
+++ b/sass/vars/_theme.scss
@@ -4,7 +4,7 @@ $clr-light: #ffffff;
 
 $clr-light-grey: #f3f5f7;
 $clr-medium-grey: #dee3e7;
-$clr-dark-grey: #737a82;
+$clr-dark-grey: #5e6369;
 
 $clr-blue: #3782c3;
 $clr-blue-light: rgb(212, 239, 252);
@@ -25,8 +25,10 @@ $nav-width: 175px;
 $border-radius: .25rem;
 $container-max: 1200px;
 $box-shadow: 0 2px 2px rgba($clr-dark, .5);
-$box-shadow-1: 0 0 0 1px rgba(63, 63, 68, .05), 0 1px 3px 0 rgba($clr-dark, .15);
-$box-shadow-inset: inset 0 0 0 1px rgba(63, 63, 68, .05), inset 0 1px 3px 0 rgba($clr-dark, .15);
+$box-shadow-1: 0 0 0 1px rgba(63, 63, 68, .05),
+0 1px 3px 0 rgba($clr-dark, .15);
+$box-shadow-inset: inset 0 0 0 1px rgba(63, 63, 68, .05),
+inset 0 1px 3px 0 rgba($clr-dark, .15);
 
 // Background Colors
 $bg-dark: $clr-dark;
